gcc/testsuite/g++.old-deja/g++.other/crash60.C
// { dg-do assemble  }

void foo ()
{
  int e;
  e := e;	// { dg-error "" } parse error
}
